--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Rohan's Portfolio | All Rights Reserved</p>
+    <p>© 2025 Ranjeet's Portfolio | All Rights Reserved</p>
   </footer>
 </body>
 </html>
